--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     
     <div class="reward" id="reward-section">
-        ðŸŽ‰ Congrats! Now go get your present! <br>
+        Congrats! Now go get your present! <br>
         <a href="https://youtu.be/t3_SpUGrnVY" target="_blank">Click here to get your reward!</a>
     </div>
 
